fixed the scrollbar but need to fix the position #68

--- a/src/frontend/src/app/home-page/popups/profil/profil.component.css
+++ b/src/frontend/src/app/home-page/popups/profil/profil.component.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 30%;
   color: white;
   font-size: 20px;
 }
@@ -15,6 +15,7 @@
   flex-direction: row;
   justify-content: space-between;
   width: 90%;
+  height: auto;
   border-radius: 1em;
   background-color: #1A202C;
 
